--- a/app.json
+++ b/app.json
@@ -11,6 +11,11 @@
     "buildpacks": [{
     "url": "heroku/python"
   }],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "eco"
+    }
   },
   "addons": [
       {
